--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Checkout'
+name: 'PipelineCheckout'
 description: 'Checkout a Git repository at a particular version'
 inputs:
   repository:
